--- a/requirements.txt
+++ b/requirements.txt
@@ -22,12 +22,12 @@ tabulate
 
 # LangChain ecosystem
 # Core LangChain packages (new modular versions)
-langchain
-langchain-core
-langchain-community
-langchain-text-splitters
-langchain-huggingface
-langchain-groq
+langchain>=0.2.11
+langchain-core>=0.2.11
+langchain-community>=0.2.11
+langchain-text-splitters>=0.2.11
+langchain-huggingface>=0.0.8
+langchain-groq>=0.1.3
 
 # Supporting NLP & vector libraries
 sentence-transformers
