--- a/requirements.txt
+++ b/requirements.txt
@@ -21,18 +21,10 @@ python-dotenv
 tabulate
 
 # LangChain ecosystem
-# Core LangChain packages (new modular versions)
-langchain>=0.2.11
-langchain-core>=0.2.11
-langchain-community>=0.2.11
-langchain-text-splitters>=0.2.11
-langchain-huggingface>=0.0.8
-langchain-groq>=0.1.3
-
-# Supporting NLP & vector libraries
+langchain
+langchain-community
+langchain-huggingface
+langchain-groq
 sentence-transformers
 faiss-cpu
-
-# PDF generation
 xhtml2pdf
-
